--- a/.github/workflows/image_build.yml
+++ b/.github/workflows/image_build.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 env:
-  RUNNER_VERSION: 2.294.0
+  RUNNER_VERSION: 2.294.1
 
 jobs:
   build-and-push:
@@ -18,21 +18,25 @@ jobs:
         uses: azure/login@v1.4.5
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: "Build GitHub Runner container image"
-        uses: azure/docker-login@v1
-        with:
-          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
       - run: |
-          docker build --build-arg RUNNER_VERSION=${{ env.RUNNER_VERSION }} -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/pwd9000-github-runner-lin:${{ env.RUNNER_VERSION }} .      
-
-      - name: "Push container image to ACR"
-        uses: azure/docker-login@v1
+         az account show
+      - name: Azure CLI script file
+        uses: azure/CLI@v1
         with:
-          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
-      - run: |
-          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/pwd9000-github-runner-lin:${{ env.RUNNER_VERSION }}
+          azcliversion: 2.46.0
+          inlineScript: |
+            chmod +x $GITHUB_WORKSPACE/scripts/acr_create.sh
+            $GITHUB_WORKSPACE/scripts/acr_create.sh
+
+      # - name: "Build GitHub Runner container image"
+      #   uses: azure/docker-login@v1
+      #   with:
+      #     login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+      #     username: ${{ secrets.REGISTRY_USERNAME }}
+      #     password: ${{ secrets.REGISTRY_PASSWORD }}
+      # - run: |
+      #     docker build --build-arg RUNNER_VERSION=${{ env.RUNNER_VERSION }} -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/pwd9000-github-runner-lin:${{ env.RUNNER_VERSION }} .      
+      #     docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/pwd9000-github-runner-lin:${{ env.RUNNER_VERSION }}
+
+
+      
