new build scenario

--- a/.github/workflows/image_build.yml
+++ b/.github/workflows/image_build.yml
@@ -5,11 +5,13 @@ on:
 
 env:
   RUNNER_VERSION: 2.294.1
+  ACR_NAME: stream4bosch
+  R_GROUP: final-project
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    steps:
+    steps:s
       # checkout the repo
       - name: "Checkout GitHub Action"
         uses: actions/checkout@v3.0.2
@@ -19,24 +21,28 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       - run: |
-         az account show
-      - name: Azure CLI script file
-        uses: azure/CLI@v1
-        with:
-          azcliversion: 2.46.0
-          inlineScript: |
-            chmod +x $GITHUB_WORKSPACE/scripts/acr_create.sh
-            $GITHUB_WORKSPACE/scripts/acr_create.sh
+         acrLength=`az acr list --query "[?name=='${{ env.ACR_NAME }}']"`
+         [[ ${#acrLength} -gt 3 ]] && echo "acr exist" || \
+         az acr create --resource-group ${{ env.R_GROUP }} \
+         --name ${{ env.ACR_NAME }} --sku Basic
+
+      # - name: Azure CLI script file
+      #   uses: azure/CLI@v1
+      #   with:
+      #     azcliversion: 2.46.0
+      #     inlineScript: |
+      #       chmod +x $GITHUB_WORKSPACE/scripts/acr_create.sh
+      #       $GITHUB_WORKSPACE/scripts/acr_create.sh
 
       # - name: "Build GitHub Runner container image"
       #   uses: azure/docker-login@v1
       #   with:
-      #     login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+      #     login-server: ${{ env.ACR_NAME }}.azurecr.io
       #     username: ${{ secrets.REGISTRY_USERNAME }}
       #     password: ${{ secrets.REGISTRY_PASSWORD }}
       # - run: |
-      #     docker build --build-arg RUNNER_VERSION=${{ env.RUNNER_VERSION }} -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/pwd9000-github-runner-lin:${{ env.RUNNER_VERSION }} .      
-      #     docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/pwd9000-github-runner-lin:${{ env.RUNNER_VERSION }}
+      #     docker build --build-arg RUNNER_VERSION=${{ env.RUNNER_VERSION }} -t ${{ env.ACR_NAME }}.azurecr.io/final-project:${{ env.RUNNER_VERSION }} .      
+      #     docker push ${{ env.ACR_NAME }}.azurecr.io/final-project:${{ env.RUNNER_VERSION }}
 
 
       
