--- a/.github/workflows/image_build.yml
+++ b/.github/workflows/image_build.yml
@@ -11,7 +11,7 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    steps:s
+    steps:
       # checkout the repo
       - name: "Checkout GitHub Action"
         uses: actions/checkout@v3.0.2
