--- a/.github/workflows/image_build.yml
+++ b/.github/workflows/image_build.yml
@@ -45,7 +45,7 @@ jobs:
       - run: |
           commit_count=$(git rev-list --all --count)
           docker build --build-arg RUNNER_VERSION=${{ env.RUNNER_VERSION }} -t ${{ env.ACR_NAME }}.azurecr.io/final-project:ver.$commit_count .      
-          docker push ${{ env.ACR_NAME }}.azurecr.io/final-project:${{ env.RUNNER_VERSION }}
+          docker push ${{ env.ACR_NAME }}.azurecr.io/final-project:ver.$commit_count
 
 
       
