--- a/.github/workflows/image_build.yml
+++ b/.github/workflows/image_build.yml
@@ -43,7 +43,7 @@ jobs:
           username: ${{ env.ACR_NAME }}
           password: ${{ secrets.REG_PASS }}
       - run: |
-          commit_count=$(git rev-list --all --count)
+          commit_count=$(git rev-list HEAD --count)
           docker build --build-arg RUNNER_VERSION=${{ env.RUNNER_VERSION }} -t ${{ env.ACR_NAME }}.azurecr.io/final-project:ver.$commit_count .      
           docker push ${{ env.ACR_NAME }}.azurecr.io/final-project:ver.$commit_count
 
