--- a/Dockerfile_scratch
+++ b/Dockerfile_scratch
@@ -1,7 +1,5 @@
-# base image
 FROM ubuntu:22.04
 
-#input GitHub runner version argument
 ARG RUNNER_VERSION=2.302.1
 ARG DEBIAN_FRONTEND=noninteractive
 
@@ -10,28 +8,30 @@ LABEL Email="sotirov.sasho@gmail.com"
 LABEL BaseImage="ubuntu:22.04"
 LABEL RunnerVersion=${RUNNER_VERSION}
 
-## update the base packages + add a non-sudo user
 RUN apt-get update -y && apt-get upgrade -y && useradd -m ghub
-
-# install the packages and dependencies 
-RUN apt-get install -y --no-install-recommends curl nodejs wget unzip vim git build-essential libssl-dev libffi-dev python3 python3-venv python3-dev python3-pip
-
-# cd into the user directory, download and unzip the github actions runner
+RUN apt-get install -y --no-install-recommends \
+    curl \
+    nodejs \
+    wget \
+    unzip \
+    vim git \
+    build-essential \
+    libssl-dev \
+    libffi-dev \
+    python3 \
+    jq \
+    python3-venv \
+    python3-dev \
+    python3-pip
 RUN cd /home/ghub && mkdir actions-runner && cd actions-runner \
     && curl -O -L https://github.com/actions/runner/releases/download/v${RUNNER_VERSION}/actions-runner-linux-x64-${RUNNER_VERSION}.tar.gz \
     && tar xzf actions-runner-linux-x64-${RUNNER_VERSION}.tar.gz
-
-# install some additional dependencies
 RUN chown -R ghub ~ghub && /home/ghub/actions-runner/bin/installdependencies.sh
 
-# add over the start.sh script
 ADD scripts/start.sh start.sh
 
-# make the script executable
 RUN chmod +x start.sh
 
-# set the user to "ghub" so all subsequent commands are run as the ghub user
 USER ghub
 
-# set the entrypoint to the start.sh script
 ENTRYPOINT ["./start.sh"]
