--- a/src/runner_deployment.yml
+++ b/src/runner_deployment.yml
@@ -35,7 +35,7 @@ spec:
   template:
     spec:
       repository: bosch-ecs-career-camp/final-project
-      image: stream4acr.azurecr.io/final-project:445f55.v32
+      image: stream4acr.azurecr.io/final-project:4c8510.v36
       
 ---
 # apiVersion: actions.summerwind.dev/v1alpha1
