fix runner automation

--- a/.github/workflows/infra_build.yml
+++ b/.github/workflows/infra_build.yml
@@ -33,9 +33,8 @@ jobs:
         id: install
 
       - name: Deploy Runners
-        run: az version
-        #run: ./src/deploy_runners.sh
-        #shell: bash
+        run: ./src/deploy_runners.sh
+        shell: bash
 
 
       
