--- a/src/runner_deploy.yml
+++ b/src/runner_deploy.yml
@@ -1,61 +1,35 @@
-# apiVersion: actions.summerwind.dev/v1alpha1
-# kind: RunnerDeployment
-# metadata:
-#   name: example-runnerdeploy
-# spec:
-#   replicas: 1
-#   template:
-#     spec:
-#       repository: bosch-ecs-career-camp/final-project
-#       image: stream4acr.azurecr.io/final-project:445f55.v32
-
-
-# apiVersion: actions.summerwind.dev/v1alpha1
-# kind: RunnerSet
-# metadata:
-#   name: azure-runners
-# spec:
-#   replicas: 1
-#   repository: bosch-ecs-career-camp/final-project
-#   image: stream4acr.azurecr.io/final-project:445f55.v32
-#   selector:
-#     matchLabels:
-#       app: runner-deploy
-#   serviceName: runner-deploy
-#   template:
-#     metadata:
-#       labels:
-#         app: runner-deploy
-
 apiVersion: actions.summerwind.dev/v1alpha1
 kind: RunnerDeployment
 metadata:
-  name: runner-deployment
+  name: azure-runners
+  namespace: default 
 spec:
+  replicas: 0
   template:
     spec:
       repository: bosch-ecs-career-camp/final-project
       image: stream4acr.azurecr.io/final-project:1112da.v51
-      
+      labels: 
+        - azure
+        - aks
+      env:
+      - name: RUNNER_FEATURE_FLAG_EPHEMERAL
+        value: true
 ---
-# apiVersion: actions.summerwind.dev/v1alpha1
-# kind: HorizontalRunnerAutoscaler
-# metadata:
-#   name: runner-deployment-autoscaler
-# spec:
-#   # Runners in the targeted RunnerDeployment won't be scaled down
-#   # for 5 minutes instead of the default 10 minutes now
-#   scaleDownDelaySecondsAfterScaleOut: 300
-#   scaleTargetRef:
-#     kind: RunnerDeployment
-#     # # In case the scale target is RunnerSet:
-#     # kind: RunnerSet
-#     name: runner-deployment
-#   minReplicas: 1
-#   maxReplicas: 5
-#   metrics:
-#   - type: PercentageRunnersBusy
-#     scaleUpThreshold: '0.75'
-#     scaleDownThreshold: '0.25'
-#     scaleUpFactor: '2'
-#     scaleDownFactor: '0.5'
+apiVersion: actions.summerwind.dev/v1alpha1
+kind: HorizontalRunnerAutoscaler
+metadata:
+  name: runners-autoscaler
+  namespace: default
+spec:
+  minReplicas: 1
+  maxReplicas: 5
+  scaleTargetRef:
+    kind: RunnerDeployment
+    # # In case the scale target is RunnerSet:
+    # kind: RunnerSet
+    name: azure-runners
+  scaleUpTriggers:
+    - githubEvent:
+        workflowJob: {}
+      duration: "5m"
