share tag by artifacts

--- a/.github/workflows/infra_build.yml
+++ b/.github/workflows/infra_build.yml
@@ -33,10 +33,12 @@ jobs:
       #   id: install
 
       - name: Download TAG
-        uses: actions/download-artifact@v3
+        uses: dawidd6/action-download-artifact@v2
         with:
+          workflow: ${{ github.event.workflow_run.workflow_id }}
+          workflow_conclusion: success
           name: tagging
-
+      
       - name: test
         shell: bash
         run: |
