--- a/.github/workflows/infra_build.yml
+++ b/.github/workflows/infra_build.yml
@@ -34,6 +34,8 @@ jobs:
 
       - name: Download TAG
         uses: dawidd6/action-download-artifact@v2
+        with: 
+          workflow: image_build.yml
         
       
       - name: test
