--- a/.github/workflows/infra_build.yml
+++ b/.github/workflows/infra_build.yml
@@ -44,7 +44,8 @@ jobs:
           ls -al 
           pwd 
           TAG=`cat tagging/tag`
-          echo $TAG          
+          echo $TAG 
+          ls -alh ./src/         
           cat ./src/runner-deployment.yml
           cat ./src/runner-deployment.yml | envsubst | cat -
           
