--- a/.github/workflows/infra_build.yml
+++ b/.github/workflows/infra_build.yml
@@ -43,11 +43,8 @@ jobs:
         run: |
           ls -al 
           pwd 
-          TAG=`cat tagging/tag`
-          echo $TAG 
-          ls -alh ./src/         
-          cat ./src/runner-deployment.yml
-          cat ./src/runner-deployment.yml | envsubst | cat -
+          TAG=`cat tagging/tag`                    
+          cat ./src/runner_deployment.yml | envsubst | cat -
           
 
       
