--- a/.github/workflows/infra_build.yml
+++ b/.github/workflows/infra_build.yml
@@ -13,24 +13,24 @@ jobs:
       - name: "Checkout GitHub Action"
         uses: actions/checkout@v3.0.2
        
-      # - name: Azure Login
-      #   uses: azure/login@v1.4.5
-      #   with:
-      #     creds: ${{ secrets.AZURE_CREDENTIALS }}          
+      - name: Azure Login
+        uses: azure/login@v1.4.5
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}          
 
-      # - name: Azure CLI script file
-      #   uses: azure/CLI@v1
-      #   with:
-      #     azcliversion: 2.46.0
-      #     inlineScript: |
-      #       chmod +x $GITHUB_WORKSPACE/src/aks_build.sh
-      #       $GITHUB_WORKSPACE/src/aks_build.sh
+      - name: Azure CLI script file
+        uses: azure/CLI@v1
+        with:
+          azcliversion: 2.46.0
+          inlineScript: |
+            chmod +x $GITHUB_WORKSPACE/src/aks_build.sh
+            $GITHUB_WORKSPACE/src/aks_build.sh
 
-      # - name: Install Kubectl
-      #   uses: azure/setup-kubectl@v3
-      #   with:
-      #     version: 'v1.26.3'
-      #   id: install
+      - name: Install Kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version: 'v1.26.3'
+        id: install
 
       - name: Download TAG
         uses: dawidd6/action-download-artifact@v2
