--- a/.github/workflows/infra_build.yml
+++ b/.github/workflows/infra_build.yml
@@ -1,4 +1,4 @@
-name: Build AKS and Action Runners
+name: Create AKS and Deploy Action Runners
 
 on:
   workflow_dispatch:
@@ -26,7 +26,7 @@ jobs:
             chmod +x $GITHUB_WORKSPACE/src/aks_build.sh
             $GITHUB_WORKSPACE/src/aks_build.sh
 
-      - name: Install Kubectl
+      - name: Install KubeControl
         uses: azure/setup-kubectl@v3
         with:
           version: 'v1.26.3'
