--- a/actions-runner-controller.yaml
+++ b/actions-runner-controller.yaml
@@ -1,9 +1,9 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  labels:
-    control-plane: controller-manager
-  name: actions-runner-system
+# apiVersion: v1
+# kind: Namespace
+# metadata:
+#   labels:
+#     control-plane: controller-manager
+#   name: actions-runner-system
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
