--- a/runnerbasic.yml
+++ b/runnerbasic.yml
@@ -1,11 +1,12 @@
-
 apiVersion: actions.summerwind.dev/v1alpha1
 kind: RunnerDeployment
 metadata:
-  name: runner-deployment
-spec:   
+  name: azure-runners
+  namespace: default 
+spec:
   replicas: 1
   template:
     spec:
       repository: bosch-ecs-career-camp/final-project
-      image: stream4acr.azurecr.io/final-project:$TAG      
+      image: stream4acr.azurecr.io/final-project:32fe7b.v86
+      
