--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,21 +5,21 @@ on:
 
 jobs:
   job1:
-    runs-on: self-hosted
+    runs-on: [azure,demo]
     steps:
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v2
          
       
   job2:
-    runs-on: self-hosted
+    runs-on: [azure,demo]
     steps:
       - uses: actions/checkout@v2
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v2
 
   job3:
-    runs-on: self-hosted
+    runs-on: [azure,demo]
     steps:    
       - name: "Login via Azure CLI"
         uses: azure/login@v1.4.5
@@ -27,14 +27,14 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
   
   job4:
-    runs-on: self-hosted
+    runs-on: [azure,demo]
     steps:
       - uses: actions/checkout@v2
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v2
   
   job5:
-    runs-on: self-hosted
+    runs-on: [azure,demo]
     steps:
       - uses: actions/checkout@v2
       - name: Install Terraform
