--- a/webscalebasic.yml
+++ b/webscalebasic.yml
@@ -1,16 +1,16 @@
 apiVersion: actions.summerwind.dev/v1alpha1
 kind: HorizontalRunnerAutoscaler
 metadata:
-  name: example-runners
+  name: scale-runners
 spec:
-  minReplicas: 1
-  maxReplicas: 5
+  minReplicas: 0
+  maxReplicas: 10
   scaleTargetRef:
     kind: RunnerDeployment
     # # In case the scale target is RunnerSet:
     # kind: RunnerSet
-    name: example-runners
+    name: azure-runners
   scaleUpTriggers:
     - githubEvent:
         workflowJob: {}
-      duration: "3m"
+      duration: "5m"
