--- a/.github/workflows/matrix_workflow.yml
+++ b/.github/workflows/matrix_workflow.yml
@@ -1,24 +1,19 @@
-name: Matrix jobs
-
+name: Matrix Strategy
 
 on:  
   workflow_dispatch:
-jobs:
-  # This workflow contains a single job called "build"
+jobs:  
   matrix:
     strategy:
       matrix:
-        node: [1, 2, 3, 4, 5, 6, 7]
-    # The type of runner that the job will run on
+        node: [1, 2, 3, 4, 5, 6, 7]    
     runs-on: ['azure', 'demo']
 
     steps:
 
-      # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo ${{ matrix.node }}
 
-      # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
