--- a/.github/workflows/image_build.yml
+++ b/.github/workflows/image_build.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           count=$(git rev-list --all --count)
           export TAG=${GITHUB_SHA::6}.v$count
+          echo $TAG
           echo $TAG > tag
           docker build -t ${{ env.ACR_NAME }}.azurecr.io/final-project:$TAG .      
           docker push ${{ env.ACR_NAME }}.azurecr.io/final-project:$TAG
