--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   job1:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
       #['azure', 'demo']
     steps:
       - name: Install Terraform
