added wait logic

--- a/runner_deployment.yml
+++ b/runner_deployment.yml
@@ -28,4 +28,4 @@ spec:
   metrics:
   - type: TotalNumberOfQueuedAndInProgressWorkflowRuns
     repositoryNames:    
-    - https://github.com/bosch-ecs-career-camp/final-project
+    - bosch-ecs-career-camp/final-project
