--- a/.github/workflows/prerequisite.yml
+++ b/.github/workflows/prerequisite.yml
@@ -15,10 +15,11 @@ jobs:
       - name: "Checkout GitHub Action"
         uses: actions/checkout@v3.0.2        
       
-      - run: gh issue comment $ISSUE --body "Thank you for opening this issue!"
+      - run: gh secret set MYSECRET --body "$ENV_VALUE"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ISSUE: ${{ github.event.issue.html_url }}
+          ENV_VALUE: "veryscarysecret"
+          
 
       
 
