--- a/.github/workflows/image_build.yml
+++ b/.github/workflows/image_build.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - 'Dockerfile'
+      - 'build/Dockerfile'
 
 env:
   # image container registry name
