--- a/.github/workflows/image_build.yml
+++ b/.github/workflows/image_build.yml
@@ -14,10 +14,10 @@ jobs:
   build-push-and-versioning:
     runs-on: ubuntu-latest
     steps:      
-      # - name: "Checkout GitHub Action"
-      #   uses: actions/checkout@v3.0.2
-      #   with:
-      #     fetch-depth: 0   
+      - name: "Checkout GitHub Action"
+        uses: actions/checkout@v3.0.2
+        with:
+          fetch-depth: 0   
 
       # - name: "Azure Container Registry Login"
       #   uses: azure/docker-login@v1
