--- a/.github/workflows/image_build.yml
+++ b/.github/workflows/image_build.yml
@@ -41,11 +41,11 @@ jobs:
 
       - name: Generate list using Markdown
         run: |
-          echo "This is the lead in sentence for the list" >> $GITHUB_STEP_SUMMARY
+          echo "##Successfully complete the job with the following details " >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
-          echo "- Lets add a bullet point" >> $GITHUB_STEP_SUMMARY
-          echo "- Lets add a second bullet point" >> $GITHUB_STEP_SUMMARY
-          echo "- How about a third one?" >> $GITHUB_STEP_SUMMARY
+          echo "- Successfully build image final-project:$TAG" >> $GITHUB_STEP_SUMMARY
+          echo "- Successfully push to ACR ${{ env.ACR_NAME }}.azurecr.io" >> $GITHUB_STEP_SUMMARY
+          echo "- Access URL is ${{ env.ACR_NAME }}.azurecr.io/final-project:$TAG" >> $GITHUB_STEP_SUMMARY
 
 
       
