--- a/.github/workflows/image_build.yml
+++ b/.github/workflows/image_build.yml
@@ -26,9 +26,10 @@ jobs:
       #     username: ${{ env.ACR_NAME }}
       #     password: ${{ secrets.REG_PASS }}
       - name: "Build and Push Runner image"
+        id: tag
         run: |
           count=$(git rev-list --all --count)
-          export TAG=${GITHUB_SHA::6}.v$count          
+          export TAG=${GITHUB_SHA::6}.v$count        
           echo $TAG >> $GITHUB_ENV
           echo $TAG > tag
   #        docker build -t ${{ env.ACR_NAME }}.azurecr.io/final-project:$TAG build/      
@@ -44,9 +45,8 @@ jobs:
         run: |
           echo "### Successfully complete the job with the following details :rocket:" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
-          echo "- Successfully build image final-project:${{ env.TAG }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Successfully build image final-project:${{ steps.tag.outputs.TAG }}" >> $GITHUB_STEP_SUMMARY
           echo "- Successfully push to ACR ${{ env.ACR_NAME }}.azurecr.io" >> $GITHUB_STEP_SUMMARY
-          echo "- Access URL is ${{ env.ACR_NAME }}.azurecr.io/final-project:${{ env.TAG }}" >> $GITHUB_STEP_SUMMARY
-
-
+          echo "- Access URL is ${{ env.ACR_NAME }}.azurecr.io/final-project:${{ steps.tag.outputs.TAG }}" >> $GITHUB_STEP_SUMMARY
+                    
       
