--- a/.github/workflows/image_build.yml
+++ b/.github/workflows/image_build.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           count=$(git rev-list --all --count)
           export TAG=${GITHUB_SHA::6}.v$count        
-          echo $TAG >> $GITHUB_ENV
+          echo TAG=$TAG >> $GITHUB_ENV
           echo $TAG > tag
   #        docker build -t ${{ env.ACR_NAME }}.azurecr.io/final-project:$TAG build/      
   #        docker push ${{ env.ACR_NAME }}.azurecr.io/final-project:$TAG
